# petrichor-agent

./: .env.example  .gitignore  README.md  docker-compose.langfuse.yml  docker-compose.yml  otel-collector-config.yaml  pyproject.toml
app/: __init__.py  config.py  main.py  observability.py  runtime.py  schemas.py  types.py
app/agent/: graph.py  state.py
app/db/: clickhouse.py  postgres.py
app/prompts/: __init__.py  summary.py  system.py
app/services/: agui.py  analytics.py  langfuse.py  mcp.py  model.py  runner.py
app/static/: index.html
scripts/: setup_macos_postgres.sh
tests/: test_app.py  test_mcp_registry.py
