[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "petrichor-agent"
version = "0.1.0"
description = "Minimal local-agent harness with LangGraph, LiteLLM, Postgres, ClickHouse, and OpenTelemetry."
readme = "README.md"
requires-python = ">=3.12,<3.13"
dependencies = [
  "asyncpg>=0.30.0,<1.0.0",
  "clickhouse-connect>=0.9.2,<1.0.0",
  "fastapi>=0.116.0,<1.0.0",
  "langchain>=0.3.27,<1.0.0",
  "httpx>=0.28.1,<1.0.0",
  "langfuse>=3.8.1,<4.0.0",
  "langgraph>=0.6.0,<1.0.0",
  "litellm>=1.74.0,<2.0.0",
  "mcp>=1.22.0,<2.0.0",
  "opentelemetry-api>=1.36.0,<2.0.0",
  "opentelemetry-exporter-otlp-proto-grpc>=1.36.0,<2.0.0",
  "opentelemetry-instrumentation-fastapi>=0.57b0,<1.0.0",
  "opentelemetry-instrumentation-logging>=0.57b0,<1.0.0",
  "opentelemetry-sdk>=1.36.0,<2.0.0",
  "pre-commit>=4.6.0",
  "pydantic-settings>=2.10.1,<3.0.0",
  "ruff>=0.15.18",
  "uvicorn[standard]>=0.35.0,<1.0.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.4.1,<9.0.0",
  "pytest-asyncio>=1.1.0,<2.0.0",
  "pytest-cov>=6.2.1,<7.0.0",
  "ruff>=0.12.0,<1.0.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.hatch.build.targets.wheel]
packages = ["app"]
